--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -210,6 +210,12 @@ en:
           %{title} (%{link}) has been successfully deposited in the CDR and is now available in accordance with the visibility
           settings that you selected.\r\n\r\n
           If you have questions, please feel free to <a href=\"https://blogs.lib.unc.edu/cdr/index.php/contact-us/\">contact us</a>!"
+        dataset_deposited:
+          subject: CDR dataset deposited
+          message: "Hello,\r\n\r\n
+          %{title} (%{link}) has been successfully deposited in the CDR and is now available in accordance with the visibility
+          settings that were selected by the depositor.\r\n\r\n
+          If you have questions, please feel free to <a href=\"https://blogs.lib.unc.edu/cdr/index.php/contact-us/\">contact us</a>!"
         deposited_manager:
           subject: CDR deposit successful
           message: "Hello,\r\n\r\n
