--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -205,25 +205,25 @@ en:
           subject: "CDR deletion request was not approved"
           message: "The deletion request for %{title} (<a href=\"%{document_path}\">%{work_id}</a>) was rejected by %{user}. %{comment}"
         deposited:
-          subject: CDR deposit successful - 1
+          subject: CDR deposit successful
           message: "Hello,\r\n\r\n
           %{title} (%{link}) has been successfully deposited in the CDR and is now available in accordance with the visibility
           settings that you selected.\r\n\r\n
           If you have questions, please feel free to <a href=\"https://blogs.lib.unc.edu/cdr/index.php/contact-us/\">contact us</a>!"
-        dataset_deposited:
-          subject: CDR dataset deposited
+        deposited_viewer:
+          subject: CDR deposit successful
           message: "Hello,\r\n\r\n
           %{title} (%{link}) has been successfully deposited in the CDR and is now available in accordance with the visibility
           settings that were selected by the depositor.\r\n\r\n
           If you have questions, please feel free to <a href=\"https://blogs.lib.unc.edu/cdr/index.php/contact-us/\">contact us</a>!"
         deposited_manager:
-          subject: CDR deposit successful - 2
+          subject: CDR deposit successful
           message: "Hello,\r\n\r\n
           %{title} (%{link}) has been successfully deposited in the CDR and is now available in accordance with the visibility
           settings that were selected by the depositor.\r\n\r\n
           If you have questions, please feel free to <a href=\"https://blogs.lib.unc.edu/cdr/index.php/contact-us/\">contact us</a>!"
         honors_mediated_deposit:
-          subject: CDR deposit successful - 3
+          subject: CDR deposit successful 
           message: "%{title_link} has been deposited in the Carolina Digital Repository (CDR), and has been sent to Honors Carolina for review. Your entry will remain private until after your official graduation date, at which time, Honors Carolina will approve and publish your thesis. Please contact honorscarolina@unc.edu with any questions or concerns."
         honors_department_reviewer_deposit:
           subject: CDR deposit needs review
